--- a/code/ncaa-up-coming-ready.html
+++ b/code/ncaa-up-coming-ready.html
@@ -649,15 +649,15 @@
             </div>
             <div style="font-size: 11px; color: #7f8c8d; margin-top: 2px;">Feb 23, 2026</div>
             <div class="mobile-status-bar">
-              <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value" style="font-weight: bold; color: #7f8c8d;">TBD</span></div>
-              <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value" style="font-weight: bold; color: #7f8c8d;">TBD</span></div>
-              <div class="ms-item"><span class="ms-label">RANK</span><span class="ms-value" style="font-weight: bold; color: #7f8c8d;">TBD</span></div>
+              <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value" style="font-weight: color: #7f8c8d;">TBD</span></div>
+              <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value" style="font-weight: color: #7f8c8d;">TBD</span></div>
+              <div class="ms-item"><span class="ms-label">RANK</span><span class="ms-value" style="font-weight: color: #7f8c8d;">TBD</span></div>
             </div>
           </td>
-          <td class="hide-mobile" style="font-weight: bold; color: #7f8c8d;">TBD</td>
-          <td class="hide-mobile" style="font-weight: bold; color: #7f8c8d;">TBD</td>
-          <td class="hide-mobile" style="font-weight: bold; color: #7f8c8d;">TBD</td>
-          <td class="hide-mobile" style="font-weight: bold; color: #7f8c8d;">TBD</td>
+          <td class="hide-mobile" style="font-weight: color: #7f8c8d;">TBD</td>
+          <td class="hide-mobile" style="font-weight: color: #7f8c8d;">TBD</td>
+          <td class="hide-mobile" style="font-weight: color: #7f8c8d;">TBD</td>
+          <td class="hide-mobile" style="font-weight: color: #7f8c8d;">TBD</td>
         </tr>
 
         <tr>
@@ -683,15 +683,15 @@
             </div>
             <div style="font-size: 11px; color: #7f8c8d;">Feb 24, 2026</div>
             <div class="mobile-status-bar">
-              <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value" style="font-weight: bold; color:#7f8c8d;">TBD</span></div>
-              <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value" style="font-weight: bold; color: #7f8c8d;">TBD</span></div>
-              <div class="ms-item"><span class="ms-label">RANK</span><span class="ms-value" style="font-weight: bold; color: #7f8c8d;">TBD</span></div>
+              <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value" style="font-weight: color:#7f8c8d;">TBD</span></div>
+              <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value" style="font-weight: color: #7f8c8d;">TBD</span></div>
+              <div class="ms-item"><span class="ms-label">RANK</span><span class="ms-value" style="font-weight: color: #7f8c8d;">TBD</span></div>
             </div>
           </td>
-          <td class="hide-mobile" style="font-weight: bold; color: #7f8c8d;">TBD</td>
-          <td class="hide-mobile" style="font-weight: bold; color: #7f8c8d;">TBD</td>
-          <td class="hide-mobile" style="font-weight: bold; color: #7f8c8d;">TBD</td>
-          <td class="hide-mobile" style="font-weight: bold; color: #7f8c8d;">TBD</td>
+          <td class="hide-mobile" style="font-weight: color: #7f8c8d;">TBD</td>
+          <td class="hide-mobile" style="font-weight: color: #7f8c8d;">TBD</td>
+          <td class="hide-mobile" style="font-weight: color: #7f8c8d;">TBD</td>
+          <td class="hide-mobile" style="font-weight: color: #7f8c8d;">TBD</td>
         </tr>
       </tbody>
     </table>
