--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@ gtag('config', 'G-H1JW8YBDZ8');
         </h2>
       </div>
       <div style="margin-left: 25px; color: #64748b; font-size: 11px; font-weight: 700; letter-spacing: 0.3px; background: #f8fafc; padding: 4px 10px; border-radius: 4px; border: 1px solid #edf2f7; box-sizing: border-box; flex-shrink: 0;">
-        Last Updated: Feb 22, 2026
+        Last Updated: Feb 23, 2026
       </div>
     </div>
     <div style="width: 100%; height: 1px; background: #edf2f7; margin-top: 10px;"></div>
@@ -561,15 +561,15 @@ gtag('config', 'G-H1JW8YBDZ8');
           <div style="display: table-row;">
             <div style="display: table-cell; text-align: center;">
               <div style="display: flex; gap: 10px; justify-content: center;">
-                <span style="color: #cbd5e1; font-size: 16px; font-weight: 900;">-</span>
+                <span style="color: #e74c3c; font-size: 16px; font-weight: 900;">69</span>
                 <span style="color: #cbd5e1; font-size: 16px; font-weight: 900;">-</span>
                 <span style="color: #cbd5e1; font-size: 16px; font-weight: 900;">-</span>
               </div>
             </div>
             <div style="display: table-cell; text-align: center;">
               <div style="display: flex; gap: 8px; justify-content: center;">
-                <span style="color: #cbd5e1; font-size: 16px; font-weight: 900;">-</span>
-                <span style="color: #cbd5e1; font-size: 16px; font-weight: 900;">-</span>
+                <span style="color: #e74c3c; font-size: 16px; font-weight: 900;">-3</span>
+                <span style="color: #e74c3c; font-size: 16px; font-weight: 900;">69</span>
               </div>
             </div>
           </div>
@@ -577,7 +577,7 @@ gtag('config', 'G-H1JW8YBDZ8');
         
         <div class="rank-box" style="display: flex; flex-direction: column; align-items: center; gap: 2px; min-width: 45px;">
           <span style="color: #0c2340; font-size: 10px; font-weight: 800; letter-spacing: 0.5px;">RANK</span>
-          <div style="color: #cbd5e1; font-size: 18px; font-weight: 900; line-height: 1;">-</div>
+          <div style="color: #cbd5e1; font-size: 18px; font-weight: 900; line-height: 1;">1</div>
         </div>
 
         <a href="ncaa-stats.html#Tournament-Schedule-Scoring" style="text-decoration: none; display: flex; align-items: center; justify-content: center; padding: 5px;">
