--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -731,7 +731,7 @@
 
     <div style="text-align: right;">
       <span style="color: rgba(255,255,255,0.6); font-size: 9px; font-weight: 800; display: block; text-transform: uppercase;">Rank</span>
-      <span style="color: #e74c3c; font-size: 18px; font-weight: 900;">1</span>
+      <span style="color: #ffffff; font-size: 18px; font-weight: 900;">1</span>
     </div>
 
   </div>
