--- a/index.html
+++ b/index.html
@@ -569,14 +569,14 @@ gtag('config', 'G-H1JW8YBDZ8');
             <div style="display: table-cell; text-align: center;">
               <div style="display: flex; gap: 8px; justify-content: center;">
                 <span style="color: #e74c3c; font-size: 16px; font-weight: 900;">-3</span>
-                <span style="color: #e74c3c; font-size: 16px; font-weight: 900;">69</span>
+                <span style="color: #e74c3c; font-size: 16px; font-weight: 900;">(69)</span>
               </div>
             </div>
           </div>
         </div>
         
         <div class="rank-box" style="display: flex; flex-direction: column; align-items: center; gap: 2px; min-width: 45px;">
-          <span style="color: #0c2340; font-size: 10px; font-weight: 800; letter-spacing: 0.5px;">RANK</span>
+          <span style="color: #0C2340; font-size: 10px; font-weight: 800; letter-spacing: 0.5px;">RANK</span>
           <div style="color: #cbd5e1; font-size: 18px; font-weight: 900; line-height: 1;">1</div>
         </div>
 
