--- a/index.html
+++ b/index.html
@@ -577,7 +577,7 @@ gtag('config', 'G-H1JW8YBDZ8');
         
         <div class="rank-box" style="display: flex; flex-direction: column; align-items: center; gap: 2px; min-width: 45px;">
           <span style="color: #0C2340; font-size: 10px; font-weight: 800; letter-spacing: 0.5px;">RANK</span>
-          <div style="color: #cbd5e1; font-size: 18px; font-weight: 900; line-height: 1;">1</div>
+          <div style="color: #0c2340; font-size: 18px; font-weight: 900; line-height: 1;">1</div>
         </div>
 
         <a href="ncaa-stats.html#Tournament-Schedule-Scoring" style="text-decoration: none; display: flex; align-items: center; justify-content: center; padding: 5px;">
