--- a/code/index-ongoing.html
+++ b/code/index-ongoing.html
@@ -530,7 +530,7 @@ gtag('config', 'G-H1JW8YBDZ8');
         </h2>
       </div>
       <div style="margin-left: 25px; color: #64748b; font-size: 11px; font-weight: 700; letter-spacing: 0.3px; background: #f8fafc; padding: 4px 10px; border-radius: 4px; border: 1px solid #edf2f7; box-sizing: border-box; flex-shrink: 0;">
-        Last Updated: Feb 22, 2026
+        Last Updated: Feb 23, 2026
       </div>
     </div>
     <div style="width: 100%; height: 1px; background: #edf2f7; margin-top: 10px;"></div>
@@ -562,23 +562,23 @@ gtag('config', 'G-H1JW8YBDZ8');
           <div style="display: table-row;">
             <div style="display: table-cell; text-align: center;">
               <div style="display: flex; gap: 10px; justify-content: center;">
-                <span style="color: #cbd5e1; font-size: 16px; font-weight: 900;">-</span>
+                <span style="color: #e74c3c; font-size: 16px; font-weight: 900;">69</span>
                 <span style="color: #cbd5e1; font-size: 16px; font-weight: 900;">-</span>
                 <span style="color: #cbd5e1; font-size: 16px; font-weight: 900;">-</span>
               </div>
             </div>
             <div style="display: table-cell; text-align: center;">
               <div style="display: flex; gap: 8px; justify-content: center;">
-                <span style="color: #cbd5e1; font-size: 16px; font-weight: 900;">-</span>
-                <span style="color: #cbd5e1; font-size: 16px; font-weight: 900;">-</span>
+                <span style="color: #e74c3c; font-size: 16px; font-weight: 900;">-3</span>
+                <span style="color: #e74c3c; font-size: 16px; font-weight: 900;">(69)</span>
               </div>
             </div>
           </div>
         </div>
         
         <div class="rank-box" style="display: flex; flex-direction: column; align-items: center; gap: 2px; min-width: 45px;">
-          <span style="color: #0c2340; font-size: 10px; font-weight: 800; letter-spacing: 0.5px;">RANK</span>
-          <div style="color: #cbd5e1; font-size: 18px; font-weight: 900; line-height: 1;">-</div>
+          <span style="color: #0C2340; font-size: 10px; font-weight: 800; letter-spacing: 0.5px;">RANK</span>
+          <div style="color: #0c2340; font-size: 18px; font-weight: 900; line-height: 1;">1</div>
         </div>
 
         <a href="ncaa-stats.html#Tournament-Schedule-Scoring" style="text-decoration: none; display: flex; align-items: center; justify-content: center; padding: 5px;">
@@ -1496,14 +1496,14 @@ window.addEventListener('DOMContentLoaded', updateMetrics);
 <div style="display: flex; align-items: center; margin-bottom: 20px;">
   <div style="background: #4285F4; width: 36px; height: 36px; border-radius: 50%; display: flex; align-items: center; justify-content: center; margin-right: 14px; color: white; box-shadow: 0 4px 10px rgba(66,133,244,0.3);">
     <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
-      <rect x="3" y="11" width="18" height="10" rx="2"></rect>
-      <circle cx="12" cy="5" r="2"></circle>
-      <path d="M12 7v4"></path>
-      <line x1="8" y1="16" x2="8" y2="16"></line>
-      <line x1="16" y1="16" x2="16" y2="16"></line>
-    </svg>
+    <rect x="3" y="11" width="18" height="10" rx="2"></rect>
+    <circle cx="12" cy="5" r="2"></circle>
+    <path d="M12 7v4"></path>
+    <line x1="8" y1="16" x2="8" y2="16"></line>
+    <line x1="16" y1="16" x2="16" y2="16"></line>
+</svg>
   </div>
-  <h3 style="margin: 0; color: #5f6368; font-size: 13px; text-transform: uppercase; letter-spacing: 2px; font-weight: 700;">AI-Powered Profile Overview</h3>
+  <h3 style="margin: 0; color: #5f6368; font-size: 13px; text-transform: uppercase; letter-spacing: 2px; font-weight: 700;">Profile Overview</h3>
 </div>
     
 <div style="font-size: 16px; color: #3c4043; line-height: 1.8; border-left: 5px solid #0c2340; padding: 25px 15px; background-color: #f8fafc; border-radius: 0 15px 15px 0; text-align: justify; word-break: keep-all;">
