--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -649,9 +649,9 @@
             </div>
             <div style="font-size: 11px; color: #7f8c8d; margin-top: 2px;">Feb 23, 2026</div>
             <div class="mobile-status-bar">
-              <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value" style="font-weight: bold; color: #0c2340;">TBD</span></div>
-              <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value" style="font-weight: bold; color: #0c2340;">TBD</span></div>
-              <div class="ms-item"><span class="ms-label">RANK</span><span class="ms-value" style="font-weight: bold; color: #0c2340;">TBD</span></div>
+              <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value" style="font-weight: bold; color: #0c2340;">72</span></div>
+              <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value" style="font-weight: bold; color: #0c2340;">E</span></div>
+              <div class="ms-item"><span class="ms-label">RANK</span><span class="ms-value" style="font-weight: bold; color: #0c2340;">2</span></div>
             </div>
           </td>
           <td class="hide-mobile" style="font-weight: bold; color: #0c2340;">TBD</td>
@@ -683,15 +683,15 @@
             </div>
             <div style="font-size: 11px; color: #7f8c8d;">Feb 24, 2026</div>
             <div class="mobile-status-bar">
-              <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value" style="font-weight: color:#7f8c8d;">TBD</span></div>
-              <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value" style="font-weight: color: #7f8c8d;">TBD</span></div>
-              <div class="ms-item"><span class="ms-label">RANK</span><span class="ms-value" style="font-weight: color: #7f8c8d;">TBD</span></div>
+              <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value" style="font-weight: bold; color: #0c2340;">TBD</span></div>
+              <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value" style="font-weight: bold; color: #0c2340;">TBD</span></div>
+              <div class="ms-item"><span class="ms-label">RANK</span><span class="ms-value" style="font-weight: bold; color: #0c2340;">TBD</span></div>
             </div>
           </td>
-          <td class="hide-mobile" style="font-weight: color: #7f8c8d;">TBD</td>
-          <td class="hide-mobile" style="font-weight: color: #7f8c8d;">TBD</td>
-          <td class="hide-mobile" style="font-weight: color: #7f8c8d;">TBD</td>
-          <td class="hide-mobile" style="font-weight: color: #7f8c8d;">TBD</td>
+          <td class="hide-mobile" style="font-weight: bold; color: #0c2340;">TBD</td>
+          <td class="hide-mobile" style="font-weight: bold; color: #0c2340;">TBD</td>
+          <td class="hide-mobile" style="font-weight: bold; color: #0c2340;">In Progress</td>
+          <td class="hide-mobile" style="font-weight: bold; color: #0c2340;">TBD</td>
         </tr>
       </tbody>
     </table>
@@ -721,7 +721,7 @@
 
     <div style="text-align: right;">
       <span style="color: rgba(255,255,255,0.6); font-size: 9px; font-weight: 800; display: block; text-transform: uppercase;">Total</span>
-      <span style="color: #e74c3c; font-size: 18px; font-weight: 900;">69</span>
+      <span style="color: #e74c3c; font-size: 18px; font-weight: 900;">141</span>
     </div>
 
     <div style="text-align: right;">
@@ -731,7 +731,7 @@
 
     <div style="text-align: right;">
       <span style="color: rgba(255,255,255,0.6); font-size: 9px; font-weight: 800; display: block; text-transform: uppercase;">Rank</span>
-      <span style="color: #ffffff; font-size: 18px; font-weight: 900;">1</span>
+      <span style="color: #ffffff; font-size: 18px; font-weight: 900;">2</span>
     </div>
 
   </div>
