--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -654,10 +654,10 @@
               <div class="ms-item"><span class="ms-label">RANK</span><span class="ms-value" style="font-weight: bold; color: #0c2340;">2</span></div>
             </div>
           </td>
-          <td class="hide-mobile" style="font-weight: bold; color: #0c2340;">TBD</td>
-          <td class="hide-mobile" style="font-weight: bold; color: #0c2340;">TBD</td>
-          <td class="hide-mobile" style="font-weight: bold; color: #0c2340;">In Progress</td>
-          <td class="hide-mobile" style="font-weight: bold; color: #0c2340;">TBD</td>
+          <td class="hide-mobile" style="font-weight: bold; color: #0c2340;">72</td>
+          <td class="hide-mobile" style="font-weight: bold; color: #0c2340;">E</td>
+          <td class="hide-mobile" style="font-weight: bold; color: #0c2340;">Finish</td>
+          <td class="hide-mobile" style="font-weight: bold; color: #0c2340;">2</td>
         </tr>
 
         <tr>
