--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -649,13 +649,13 @@
             </div>
             <div style="font-size: 11px; color: #7f8c8d; margin-top: 2px;">Feb 23, 2026</div>
             <div class="mobile-status-bar">
-              <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value" style="font-weight: bold; color: #0c2340;">72</span></div>
-              <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value" style="font-weight: bold; color: #0c2340;">E</span></div>
+              <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value" style="font-weight: bold; color: #0047AB;">72</span></div>
+              <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value" style="font-weight: bold; color: #0047AB;">E</span></div>
               <div class="ms-item"><span class="ms-label">RANK</span><span class="ms-value" style="font-weight: bold; color: #0c2340;">2</span></div>
             </div>
           </td>
-          <td class="hide-mobile" style="font-weight: bold; color: #0c2340;">72</td>
-          <td class="hide-mobile" style="font-weight: bold; color: #0c2340;">E</td>
+          <td class="hide-mobile" style="font-weight: bold; color: #0047AB;">72</td>
+          <td class="hide-mobile" style="font-weight: bold; color: #0047AB;">E</td>
           <td class="hide-mobile" style="font-weight: bold; color: #0c2340;">Finish</td>
           <td class="hide-mobile" style="font-weight: bold; color: #0c2340;">2</td>
         </tr>
