--- a/index.html
+++ b/index.html
@@ -562,7 +562,7 @@ gtag('config', 'G-H1JW8YBDZ8');
             <div style="display: table-cell; text-align: center;">
               <div style="display: flex; gap: 10px; justify-content: center;">
                 <span style="color: #e74c3c; font-size: 16px; font-weight: 900;">69</span>
-                <span style="color: #0c2340; font-size: 16px; font-weight: 900;">72</span>
+                <span style="color: #0047AB; font-size: 16px; font-weight: 900;">72</span>
                 <span style="color: #cbd5e1; font-size: 16px; font-weight: 900;">-</span>
               </div>
             </div>
