--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -1074,14 +1074,14 @@
     </div>
     <div class="mobile-status-bar">
       <div class="ms-item"><span class="ms-label" style="color: #333;">R1-R2-R3</span><span class="ms-value" style="font-weight: 800; color: #333;"><span style="color: #e11d48;">70</span>-75-<span style="color: #e11d48;">71</span></span></div>
-      <div class="ms-item"><span class="ms-label" style="color: #333;">TOTAL</span><span class="ms-value" style="font-weight: 800; color: #333;">216</span></div>
-      <div class="ms-item"><span class="ms-label" style="color: #333;">PAR</span><span class="ms-value" style="color: #333; font-weight: 700;">E</span></div>
+      <div class="ms-item"><span class="ms-label" style="color: #333;">TOTAL</span><span class="ms-value" style="font-weight: 800; color: #0047AB;">216</span></div>
+      <div class="ms-item"><span class="ms-label" style="color: #333;">PAR</span><span class="ms-value" style="color: #0047AB; font-weight: 700;">E</span></div>
       <div class="ms-item"><span class="ms-label" style="color: #333;">FINISH</span><span class="ms-value" style="color: #333; font-weight: 700;">T3</span></div>
     </div>
   </td>
   <td class="hide-mobile" style="color: #333; font-weight: 800;"><span style="color: #e11d48;">70</span>-75-<span style="color: #e11d48;">71</span></td>
-  <td class="hide-mobile" style="color: #333; font-weight: 800;">216</td>
-  <td class="hide-mobile" style="color: #333; font-weight: 700;">E</td>
+  <td class="hide-mobile" style="color: #0047AB; font-weight: 800;">216</td>
+  <td class="hide-mobile" style="color: #0047AB; font-weight: 700;">E</td>
   <td class="hide-mobile" style="color: #333; font-weight: 700;">T3</td>
 </tr>
           
