--- a/code/ncaa-ongoing.html
+++ b/code/ncaa-ongoing.html
@@ -649,15 +649,15 @@
             </div>
             <div style="font-size: 11px; color: #7f8c8d; margin-top: 2px;">Feb 23, 2026</div>
             <div class="mobile-status-bar">
-              <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value" style="font-weight: bold; color: #0c2340;">TBD</span></div>
-              <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value" style="font-weight: bold; color: #0c2340;">TBD</span></div>
-              <div class="ms-item"><span class="ms-label">RANK</span><span class="ms-value" style="font-weight: bold; color: #0c2340;">TBD</span></div>
+              <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value" style="font-weight: bold; color: #0047AB;">72</span></div>
+              <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value" style="font-weight: bold; color: #0047AB;">E</span></div>
+              <div class="ms-item"><span class="ms-label">RANK</span><span class="ms-value" style="font-weight: bold; color: #0c2340;">2</span></div>
             </div>
           </td>
-          <td class="hide-mobile" style="font-weight: bold; color: #0c2340;">TBD</td>
-          <td class="hide-mobile" style="font-weight: bold; color: #0c2340;">TBD</td>
-          <td class="hide-mobile" style="font-weight: bold; color: #0c2340;">In Progress</td>
-          <td class="hide-mobile" style="font-weight: bold; color: #0c2340;">TBD</td>
+          <td class="hide-mobile" style="font-weight: bold; color: #0047AB;">72</td>
+          <td class="hide-mobile" style="font-weight: bold; color: #0047AB;">E</td>
+          <td class="hide-mobile" style="font-weight: bold; color: #0c2340;">Finish</td>
+          <td class="hide-mobile" style="font-weight: bold; color: #0c2340;">2</td>
         </tr>
 
         <tr>
@@ -683,15 +683,15 @@
             </div>
             <div style="font-size: 11px; color: #7f8c8d;">Feb 24, 2026</div>
             <div class="mobile-status-bar">
-              <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value" style="font-weight: color:#7f8c8d;">TBD</span></div>
-              <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value" style="font-weight: color: #7f8c8d;">TBD</span></div>
-              <div class="ms-item"><span class="ms-label">RANK</span><span class="ms-value" style="font-weight: color: #7f8c8d;">TBD</span></div>
+              <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value" style="font-weight: bold; color: #0c2340;">TBD</span></div>
+              <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value" style="font-weight: bold; color: #0c2340;">TBD</span></div>
+              <div class="ms-item"><span class="ms-label">RANK</span><span class="ms-value" style="font-weight: bold; color: #0c2340;">TBD</span></div>
             </div>
           </td>
-          <td class="hide-mobile" style="font-weight: color: #7f8c8d;">TBD</td>
-          <td class="hide-mobile" style="font-weight: color: #7f8c8d;">TBD</td>
-          <td class="hide-mobile" style="font-weight: color: #7f8c8d;">TBD</td>
-          <td class="hide-mobile" style="font-weight: color: #7f8c8d;">TBD</td>
+          <td class="hide-mobile" style="font-weight: bold; color: #0c2340;">TBD</td>
+          <td class="hide-mobile" style="font-weight: bold; color: #0c2340;">TBD</td>
+          <td class="hide-mobile" style="font-weight: bold; color: #0c2340;">In Progress</td>
+          <td class="hide-mobile" style="font-weight: bold; color: #0c2340;">TBD</td>
         </tr>
       </tbody>
     </table>
@@ -721,7 +721,7 @@
 
     <div style="text-align: right;">
       <span style="color: rgba(255,255,255,0.6); font-size: 9px; font-weight: 800; display: block; text-transform: uppercase;">Total</span>
-      <span style="color: #e74c3c; font-size: 18px; font-weight: 900;">69</span>
+      <span style="color: #e74c3c; font-size: 18px; font-weight: 900;">141</span>
     </div>
 
     <div style="text-align: right;">
@@ -731,7 +731,7 @@
 
     <div style="text-align: right;">
       <span style="color: rgba(255,255,255,0.6); font-size: 9px; font-weight: 800; display: block; text-transform: uppercase;">Rank</span>
-      <span style="color: #ffffff; font-size: 18px; font-weight: 900;">1</span>
+      <span style="color: #ffffff; font-size: 18px; font-weight: 900;">2</span>
     </div>
 
   </div>
@@ -1074,14 +1074,14 @@
     </div>
     <div class="mobile-status-bar">
       <div class="ms-item"><span class="ms-label" style="color: #333;">R1-R2-R3</span><span class="ms-value" style="font-weight: 800; color: #333;"><span style="color: #e11d48;">70</span>-75-<span style="color: #e11d48;">71</span></span></div>
-      <div class="ms-item"><span class="ms-label" style="color: #333;">TOTAL</span><span class="ms-value" style="font-weight: 800; color: #333;">216</span></div>
-      <div class="ms-item"><span class="ms-label" style="color: #333;">PAR</span><span class="ms-value" style="color: #333; font-weight: 700;">E</span></div>
+      <div class="ms-item"><span class="ms-label" style="color: #333;">TOTAL</span><span class="ms-value" style="font-weight: 800; color: #0047AB;">216</span></div>
+      <div class="ms-item"><span class="ms-label" style="color: #333;">PAR</span><span class="ms-value" style="color: #0047AB; font-weight: 700;">E</span></div>
       <div class="ms-item"><span class="ms-label" style="color: #333;">FINISH</span><span class="ms-value" style="color: #333; font-weight: 700;">T3</span></div>
     </div>
   </td>
   <td class="hide-mobile" style="color: #333; font-weight: 800;"><span style="color: #e11d48;">70</span>-75-<span style="color: #e11d48;">71</span></td>
-  <td class="hide-mobile" style="color: #333; font-weight: 800;">216</td>
-  <td class="hide-mobile" style="color: #333; font-weight: 700;">E</td>
+  <td class="hide-mobile" style="color: #0047AB; font-weight: 800;">216</td>
+  <td class="hide-mobile" style="color: #0047AB; font-weight: 700;">E</td>
   <td class="hide-mobile" style="color: #333; font-weight: 700;">T3</td>
 </tr>
           
