--- a/code/ncaa-ongoing.html
+++ b/code/ncaa-ongoing.html
@@ -391,7 +391,7 @@
   </h1>
   
   <span style="color: #64748b; font-size: 12px; font-weight: 700; letter-spacing: 0.5px; padding-bottom: 2px; white-space: nowrap;">
-    Last Updated: Feb 23, 2026
+    Last Updated: Feb 24, 2026
   </span>
 </div>
 
@@ -604,7 +604,7 @@
                   <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
                 </svg>
               </div>
-              <div class="pairing-btn" onclick="openPairing(' ')" style="display: none;">
+              <div class="pairing-btn" onclick="openPairing('./images/freshman-2025-2026/joshua-hong-UTSA-Military-City-Scorecard.jpg')">
                 <span>Scorecard</span>
                 <svg width="10" height="10" viewBox="0 0 24 24" fill="none" stroke="#64748b" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
                   <path d="M15 3h6v6"></path>
@@ -638,7 +638,7 @@
                   <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
                 </svg>
               </div>
-              <div class="pairing-btn" onclick="openPairing(' ')" style="display: none;">
+              <div class="pairing-btn" onclick="openPairing('./images/freshman-2025-2026/joshua-hong-UTSA-Military-City-Scorecard.jpg')">
                 <span>Scorecard</span>
                 <svg width="10" height="10" viewBox="0 0 24 24" fill="none" stroke="#64748b" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
                   <path d="M15 3h6v6"></path>
@@ -664,7 +664,7 @@
           <td class="col-left">
             <div style="display: flex; align-items: center; gap: 8px;">
               <div style="font-weight: 800; color: #0c2340; font-size: 15px;">Round 3</div>
-              <div class="pairing-btn" onclick="openPairing(' ')" style="display: none;">
+              <div class="pairing-btn" onclick="openPairing('./images/freshman-2025-2026/joshua-hong-UTSA-Military-City-R1-pairing.jpg')">
                 <span>Pairing</span>
                 <svg width="10" height="10" viewBox="0 0 24 24" fill="none" stroke="#64748b" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
                   <path d="M15 3h6v6"></path>
@@ -2084,6 +2084,8 @@ window.addEventListener('DOMContentLoaded', updateMetrics);
       <div id="thumbScroll">
         
 <div class="thumb-page">
+  <img src="./images/freshman-2025-2026/joshua-hong-UTSA-Military-City-R1-R2-article.jpeg" onclick="popupGallery(this)" class="thumb-img" alt="Joshua hong UTSA Military City Day 1 official article" title="Joshua hong UTSA Military City Day 1 official article" loading="lazy" decoding="async">
+  <img src="./images/freshman-2025-2026/joshua-hong-UTSA-Military-City-R1-69.jpeg" onclick="popupGallery(this)" class="thumb-img" alt="Joshua hong UTSA Military City R1 Score" title="Joshua hong UTSA Military City R1 Score" loading="lazy" decoding="async">
   <img src="./images/freshman-2025-2026/joshua-hong-UTSA-Military-City-Lineup.jpeg" onclick="popupGallery(this)" class="thumb-img" alt="Joshua Hong UTSA Men's Golf 2026 Military City Collegiate Lineup" title="Joshua Hong UTSA Men's Golf 2026 Military City Collegiate Lineup" loading="lazy" decoding="async">
   <img src="./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-2026-Military-Collegiate-poster.jpg" onclick="popupGallery(this)" class="thumb-img" alt="Joshua Hong UTSA Men's Golf 2026 Military City Collegiate Poster" title="Joshua Hong UTSA Men's Golf 2026 Military City Collegiate Poster" loading="lazy" decoding="async">
   <img src="./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-2026-Spring-Opner-Result-utrgv.jpeg" onclick="popupGallery(this)" class="thumb-img" alt="Joshua Hong UTSA Men's Golf 2026 Spring Opener Results at UTRGV" title="Joshua Hong UTSA Men's Golf 2026 Spring Opener Results at UTRGV" loading="lazy" decoding="async">
@@ -2094,11 +2096,12 @@ window.addEventListener('DOMContentLoaded', updateMetrics);
   <img src="./images/freshman-2025-2026/joshua-hong-UTSA-collegiate debut-1-70-Argent.jpeg" onclick="popupGallery(this)" class="thumb-img" alt="Joshua Hong’s collegiate debut: Shooting a 70 at the Argent Financial Invitational" title="Joshua Hong’s collegiate debut: Shooting a 70 at the Argent Financial Invitational" loading="lazy" decoding="async">
   <img src="./images/freshman-2025-2026/joshua-hong-UTSA-Official-Highlands-invitational.jpeg" onclick="popupGallery(this)" class="thumb-img" alt="Joshua Hong putting at the Highlands Invitational, featured on the official UTSA Athletics website" title="Joshua Hong putting at the Highlands Invitational, featured on the official UTSA Athletics website" loading="lazy" decoding="async">
   <img src="./images/freshman-2025-2026/joshua-hong-UTSA-TPC-San-Antonio-fall off-season.png" onclick="popupGallery(this)" class="thumb-img" alt="Joshua Hong training at the TPC San Antonio team facility during the fall off-season" title="Joshua Hong training at the TPC San Antonio team facility during the fall off-season" loading="lazy" decoding="async">
-  <img src="./images/freshman-2025-2026/joshua-hong-UTSA-Team-Photo-day.jpeg" onclick="popupGallery(this)" class="thumb-img" alt="Joshua Hong during the team photo day for his freshman debut season." title="Joshua Hong during the team photo day for his freshman debut season" loading="lazy" decoding="async">
-  <img src="./images/freshman-2025-2026/joshua-hong-UTSA-Get-To-Know.jpeg" onclick="popupGallery(this)" class="thumb-img" alt="Joshua Hong's "Get to Know" student-athlete profile information." title="Joshua Hong's "Get to Know" student-athlete profile information." loading="lazy" decoding="async">
-</div>
+  
+ </div>
 
 <div class="thumb-page">
+  <img src="./images/freshman-2025-2026/joshua-hong-UTSA-Team-Photo-day.jpeg" onclick="popupGallery(this)" class="thumb-img" alt="Joshua Hong during the team photo day for his freshman debut season." title="Joshua Hong during the team photo day for his freshman debut season" loading="lazy" decoding="async">
+  <img src="./images/freshman-2025-2026/joshua-hong-UTSA-Get-To-Know.jpeg" onclick="popupGallery(this)" class="thumb-img" alt="Joshua Hong's "Get to Know" student-athlete profile information." title="Joshua Hong's "Get to Know" student-athlete profile information." loading="lazy" decoding="async">
   <img src="./images/freshman-2025-2026/joshua-hong-UTSA-Patriot-All-America-2025-Winter.jpeg" onclick="popupGallery(this)" class="thumb-img" alt="Joshua Hong competing at the 2025 Winter Patriot All-America Invitational" title="Joshua Hong competing at the 2025 Winter Patriot All-America Invitational" loading="lazy" decoding="async">
   <img src="./images/freshman-2025-2026/Joshua-Hong-UTSA-CGN-HIGHLIGHT.jpg" onclick="popupGallery(this)" class="thumb-img" alt="Joshua Hong's CGN Player Highlight feature poster" title="Joshua Hong's CGN Player Highlight feature poster" loading="lazy" decoding="async">
   <img src="./images/freshman-2025-2026/joshua-hong-UTSA-Team-Photoday-Fran-Sam.jpeg" onclick="popupGallery(this)" class="thumb-img" alt="Joshua Hong with teammates Francisco Solorza and Sadbhav Acharya (Sam) during the freshman team photo day" title="Joshua Hong with teammates Francisco Solorza and Sadbhav Acharya (Sam) during the freshman team photo day" loading="lazy" decoding="async">
