--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -587,7 +587,7 @@
           <th class="col-score">Score</th>
           <th class="col-par">Par</th>
           <th class="col-status">Status</th>
-          <th class="col-finish">Rank</th>
+          <th class="col-finish">Pos</th>
         </tr>
       </thead>
       <tbody>
@@ -617,7 +617,7 @@
             <div class="mobile-status-bar">
               <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value" style="font-weight: bold; color: #e74c3c;">69</span></div>
               <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value" style="font-weight: bold; color: #e74c3c;">-3</span></div>
-              <div class="ms-item"><span class="ms-label">RANK</span><span class="ms-value" style="font-weight: bold; color: #0c2340;">1</span></div>
+              <div class="ms-item"><span class="ms-label">POS</span><span class="ms-value" style="font-weight: bold; color: #0c2340;">1</span></div>
             </div>
           </td>
           <td class="hide-mobile" style="font-weight: bold; color: #e74c3c;">69</td>
@@ -651,7 +651,7 @@
             <div class="mobile-status-bar">
               <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value" style="font-weight: bold; color: #0047AB;">72</span></div>
               <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value" style="font-weight: bold; color: #0047AB;">E</span></div>
-              <div class="ms-item"><span class="ms-label">RANK</span><span class="ms-value" style="font-weight: bold; color: #0c2340;">2</span></div>
+              <div class="ms-item"><span class="ms-label">POS</span><span class="ms-value" style="font-weight: bold; color: #0c2340;">2</span></div>
             </div>
           </td>
           <td class="hide-mobile" style="font-weight: bold; color: #0047AB;">72</td>
@@ -685,7 +685,7 @@
             <div class="mobile-status-bar">
               <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value" style="font-weight: bold; color: #0c2340;">TBD</span></div>
               <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value" style="font-weight: bold; color: #0c2340;">TBD</span></div>
-              <div class="ms-item"><span class="ms-label">RANK</span><span class="ms-value" style="font-weight: bold; color: #0c2340;">TBD</span></div>
+              <div class="ms-item"><span class="ms-label">POS</span><span class="ms-value" style="font-weight: bold; color: #0c2340;">TBD</span></div>
             </div>
           </td>
           <td class="hide-mobile" style="font-weight: bold; color: #0c2340;">TBD</td>
@@ -730,7 +730,7 @@
     </div>
 
     <div style="text-align: right;">
-      <span style="color: rgba(255,255,255,0.6); font-size: 9px; font-weight: 800; display: block; text-transform: uppercase;">Rank</span>
+      <span style="color: rgba(255,255,255,0.6); font-size: 9px; font-weight: 800; display: block; text-transform: uppercase;">POS</span>
       <span style="color: #ffffff; font-size: 18px; font-weight: 900;">2</span>
     </div>
 
