--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@ gtag('config', 'G-H1JW8YBDZ8');
     .status-dot-live {
       width: 8px;
       height: 8px;
-      background-color: #10b981;
+      background-color: #ff4d4d;
       border-radius: 50%;
       display: inline-block;
       animation: pulse-live 2s infinite;
@@ -520,12 +520,12 @@ gtag('config', 'G-H1JW8YBDZ8');
   <div class="ongoing-header-wrapper" style="width: 100%; margin-bottom: 10px; box-sizing: border-box;">
     <div style="display: flex; justify-content: space-between; align-items: center; flex-wrap: wrap; gap: 10px; box-sizing: border-box;">
       <div style="box-sizing: border-box;">
-        <h2 style="font-size: 18px; color: #0c2340; margin: 0; border-left: 5px solid #10b981; padding-left: 20px; font-weight: 900; letter-spacing: 0.5px; text-transform: uppercase; display: flex; align-items: center; flex-wrap: wrap; gap: 8px; box-sizing: border-box;">
+        <h2 style="font-size: 18px; color: #0c2340; margin: 0; border-left: 5px solid #c98a2e; padding-left: 20px; font-weight: 900; letter-spacing: 0.5px; text-transform: uppercase; display: flex; align-items: center; flex-wrap: wrap; gap: 8px; box-sizing: border-box;">
           <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
             <path d="M21.21 15.89A10 10 0 1 1 8 2.83"></path>
             <path d="M22 12A10 10 0 0 0 12 2v10z"></path>
           </svg>
-          ONGOING ACTIVITY
+          LATEST TOURNAMENT RESULTS
         </h2>
       </div>
       <div style="margin-left: 25px; color: #64748b; font-size: 11px; font-weight: 700; letter-spacing: 0.3px; background: #f8fafc; padding: 4px 10px; border-radius: 4px; border: 1px solid #edf2f7; box-sizing: border-box; flex-shrink: 0;">
@@ -577,7 +577,7 @@ gtag('config', 'G-H1JW8YBDZ8');
         
         <div class="rank-box" style="display: flex; flex-direction: column; align-items: center; gap: 2px; min-width: 45px;">
           <span style="color: #0C2340; font-size: 10px; font-weight: 800; letter-spacing: 0.5px;">POS</span>
-          <div style="color: #0c2340; font-size: 18px; font-weight: 900; line-height: 1;">2</div>
+          <div style="color: #0c2340; font-size: 18px; font-weight: 900; line-height: 1;">1</div>
         </div>
 
         <a href="ncaa-stats.html#Tournament-Schedule-Scoring" style="text-decoration: none; display: flex; align-items: center; justify-content: center; padding: 5px;">
