--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -403,7 +403,7 @@
   <div style="margin-bottom: 5px; width: 100%; box-sizing: border-box; padding: 0;">
     
     <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 25px; border-left: 5px solid #10b981; padding-left: 20px; margin-left: 0;">
-      <h3 style="color: #0c2340; margin: 0; text-transform: none; font-size: 1.3em; line-height: 1.2;">ONGOING TOURNAMENT</h3>
+      <h3 style="color: #0c2340; margin: 0; text-transform: none; font-size: 1.3em; line-height: 1.2;">LATEST TOURNAMENT RESULTS</h3>
       <span style="font-family: 'Montserrat', sans-serif; font-size: 0.85em; color: #888; padding-right: 0;">6th Event: Military City Collegiate | Home Field</span>
     </div>
   </div>
@@ -444,7 +444,7 @@
     .live-dot {
       width: 6px;
       height: 6px;
-      background-color: #10b981;
+      background-color: #ff4d4d;
       border-radius: 50%;
       display: inline-block;
       animation: live-pulse 2s infinite ease-in-out;
@@ -570,7 +570,7 @@
     <div style="display: flex; align-items: center; gap: 12px;">
       <div style="background: #0c2340; color: white; padding: 4px 12px; border-radius: 4px; font-size: 10px; font-weight: 900; letter-spacing: 1px; display: flex; align-items: center; gap: 8px;">
         <span class="live-dot"></span>
-        ONGOING
+        FINAL
       </div>
       <div>
         <h2 style="color: #0c2340; margin: 0; font-size: 19px; font-weight: 800;">Military City Collegiate (UTSA) | Feb 23-24</h2>
@@ -672,7 +672,7 @@
                   <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
                 </svg>
               </div>
-              <div class="pairing-btn" onclick="openPairing(' ')" style="display: none;">
+              <div class="pairing-btn" onclick="openPairing('./images/freshman-2025-2026/joshua-hong-UTSA-Military-City-Scorecard.jpg');">
                 <span>Scorecard</span>
                 <svg width="10" height="10" viewBox="0 0 24 24" fill="none" stroke="#64748b" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
                   <path d="M15 3h6v6"></path>
@@ -683,15 +683,15 @@
             </div>
             <div style="font-size: 11px; color: #7f8c8d;">Feb 24, 2026</div>
             <div class="mobile-status-bar">
-              <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value" style="font-weight: bold; color: #0c2340;">TBD</span></div>
-              <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value" style="font-weight: bold; color: #0c2340;">TBD</span></div>
-              <div class="ms-item"><span class="ms-label">POS</span><span class="ms-value" style="font-weight: bold; color: #0c2340;">TBD</span></div>
+              <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value" style="font-weight: bold; color: #0c2340;">74</span></div>
+              <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value" style="font-weight: bold; color: #0c2340;">+2</span></div>
+              <div class="ms-item"><span class="ms-label">POS</span><span class="ms-value" style="font-weight: bold; color: #0c2340;">1</span></div>
             </div>
           </td>
-          <td class="hide-mobile" style="font-weight: bold; color: #0c2340;">TBD</td>
-          <td class="hide-mobile" style="font-weight: bold; color: #0c2340;">TBD</td>
-          <td class="hide-mobile" style="font-weight: bold; color: #0c2340;">In Progress</td>
-          <td class="hide-mobile" style="font-weight: bold; color: #0c2340;">TBD</td>
+          <td class="hide-mobile" style="font-weight: bold; color: #0c2340;">74</td>
+          <td class="hide-mobile" style="font-weight: bold; color: #0c2340;">+2</td>
+          <td class="hide-mobile" style="font-weight: bold; color: #0c2340;">FINISH</td>
+          <td class="hide-mobile" style="font-weight: bold; color: #0c2340;">1</td>
         </tr>
       </tbody>
     </table>
@@ -721,17 +721,17 @@
 
     <div style="text-align: right;">
       <span style="color: rgba(255,255,255,0.6); font-size: 9px; font-weight: 800; display: block; text-transform: uppercase;">Total</span>
-      <span style="color: #e74c3c; font-size: 18px; font-weight: 900;">141</span>
+      <span style="color: #e74c3c; font-size: 18px; font-weight: 900;">215</span>
     </div>
 
     <div style="text-align: right;">
       <span style="color: rgba(255,255,255,0.6); font-size: 9px; font-weight: 800; display: block; text-transform: uppercase;">Par</span>
-      <span style="color: #e74c3c; font-size: 18px; font-weight: 900;">-3</span>
+      <span style="color: #e74c3c; font-size: 18px; font-weight: 900;">-1</span>
     </div>
 
     <div style="text-align: right;">
       <span style="color: rgba(255,255,255,0.6); font-size: 9px; font-weight: 800; display: block; text-transform: uppercase;">POS</span>
-      <span style="color: #ffffff; font-size: 18px; font-weight: 900;">2</span>
+      <span style="color: #ffffff; font-size: 18px; font-weight: 900;">1</span>
     </div>
 
   </div>
