--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@ gtag('config', 'G-H1JW8YBDZ8');
       <div class="tournament-info" style="display: flex; align-items: center; gap: 12px; flex: 1; min-width: 250px;">
         <div style="display: flex; align-items: center; gap: 6px; background: #0c2340; padding: 6px 12px; border-radius: 6px;">
           <span class="status-dot-live"></span>
-          <span style="color: #ffffff; font-size: 10px; font-weight: 800; text-transform: uppercase;">ONGOING</span>
+          <span style="color: #ffffff; font-size: 10px; font-weight: 800; text-transform: uppercase;">FINAL</span>
         </div>
         <div>
           <div style="display: flex; align-items: baseline; gap: 6px;">
