--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -402,7 +402,7 @@
   
   <div style="margin-bottom: 5px; width: 100%; box-sizing: border-box; padding: 0;">
     
-    <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 25px; border-left: 5px solid #10b981; padding-left: 20px; margin-left: 0;">
+    <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 25px; border-left: 5px solid #ff4d4d; padding-left: 20px; margin-left: 0;">
       <h3 style="color: #0c2340; margin: 0; text-transform: none; font-size: 1.3em; line-height: 1.2;">LATEST TOURNAMENT RESULTS</h3>
       <span style="font-family: 'Montserrat', sans-serif; font-size: 0.85em; color: #888; padding-right: 0;">6th Event: Military City Collegiate | Home Field</span>
     </div>
@@ -702,10 +702,10 @@
    color: #0c2340; text-decoration: none; font-size: 11px; font-weight: 900; letter-spacing: 0.8px; text-transform: uppercase; border: 1.5px solid #0c2340; 
    padding: 5px 12px; border-radius: 6px; transition: all 0.2s ease; background: #ffffff;">
   <span style="display: flex; align-items: center; gap: 6px;">
-    <span style="width: 5px; height: 5px; background-color: #10b981; border-radius: 50%; display: inline-block; animation: pulse 1.5s infinite;"></span>
+    <span style="width: 5px; height: 5px; background-color: #ff4d4d; border-radius: 50%; display: inline-block; animation: pulse 1.5s infinite;"></span>
     LIVE LEADERBOARD
   </span>
-  <svg width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="#10b981" stroke-width="3.5" stroke-linecap="round" stroke-linejoin="round">
+  <svg width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="#ff4d4d" stroke-width="3.5" stroke-linecap="round" stroke-linejoin="round">
     <line x1="7" y1="17" x2="17" y2="7"></line>
     <polyline points="7 7 17 7 17 17"></polyline>
   </svg>
