--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -703,7 +703,7 @@
    padding: 5px 12px; border-radius: 6px; transition: all 0.2s ease; background: #ffffff;">
   <span style="display: flex; align-items: center; gap: 6px;">
     <span style="width: 5px; height: 5px; background-color: #ff4d4d; border-radius: 50%; display: inline-block; animation: pulse 1.5s infinite;"></span>
-    LIVE LEADERBOARD
+    FINAL RESULTS
   </span>
   <svg width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="#ff4d4d" stroke-width="3.5" stroke-linecap="round" stroke-linejoin="round">
     <line x1="7" y1="17" x2="17" y2="7"></line>
