--- a/test-1.html
+++ b/test-1.html
@@ -662,9 +662,9 @@ gtag('config', 'G-H1JW8YBDZ8');
         </div>
         <div style="margin-bottom: 12px; display: flex; align-items: center; gap: 8px;">
           <div style="display: flex; align-items: center; justify-content: center; background: #f1f5f9; width: 24px; height: 24px; border-radius: 6px; border: 1px solid #e2e8f0;">
-            <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="#806600" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
-                <polyline points="23 6 13.5 15.5 8.5 10.5 1 18"></polyline>
-                <polyline points="17 6 23 6 23 12"></polyline>
+           <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="#806600" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
+              <line x1="7" y1="17" x2="17" y2="7"></line>
+              <polyline points="7 7 17 7 17 17"></polyline>
             </svg>
           </div>
           <div style="font-size: 14px; color: #475569;">
