--- a/test-1.html
+++ b/test-1.html
@@ -662,10 +662,11 @@ gtag('config', 'G-H1JW8YBDZ8');
         </div>
         <div style="margin-bottom: 12px; display: flex; align-items: center; gap: 8px;">
           <div style="display: flex; align-items: center; justify-content: center; background: #f1f5f9; width: 24px; height: 24px; border-radius: 6px; border: 1px solid #e2e8f0;">
-           <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="#806600" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
-              <line x1="7" y1="17" x2="17" y2="7"></line>
-              <polyline points="7 7 17 7 17 17"></polyline>
-            </svg>
+           <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" style="cursor: pointer;">
+              <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
+              <line x1="10" y1="14" x2="21" y2="3"></line>
+              <polyline points="15 3 21 3 21 9"></polyline>
+              </svg>
           </div>
           <div style="font-size: 14px; color: #475569;">
             <b>Mar 2 - Mar 3, 2026</b>
